first version of the full webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Vite App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Poppins:wght@700;900&family=Sorts+Mill+Goudy:ital@0;1&display=swap" rel="stylesheet">
+
+
+    <title>Faculty Trading Cards</title>
   </head>
   <body>
     <div class="container">
@@ -25,7 +30,8 @@
 
       
   </div>
-    <script src="node_modules/downloadjs/download.js"></script>
+    <!-- <script src="node_modules/downloadjs/download.js"></script> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
